--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                     <h1 class="text-xl sm:text-2xl font-bold gradient-text">Zip-Foreclosures</h1>
                 </div>
                 <div class="hidden sm:flex gap-4">
-                    <button class="px-4 py-2 text-sm font-medium hover:text-blue-400 transition">Features</button>
-                    <button class="px-4 py-2 text-sm font-medium hover:text-blue-400 transition">Benefits</button>
+                    <a href="https://www.gogop.site/2488912N/88X9M9K/" target="_blank" class="px-4 py-2 text-sm font-medium hover:text-blue-400 transition">Features</a>
+                    <a href="https://www.gogop.site/2488912N/88X9M9K/" target="_blank" class="px-4 py-2 text-sm font-medium hover:text-blue-400 transition">Benefits</a>
                 </div>
             </div>
         </div>
