--- a/index.html
+++ b/index.html
@@ -166,6 +166,14 @@
                                 </div>
                             </div>
 
+                            <!-- Button (Between Cards and Stats) -->
+                            <a href="https://www.gogop.site/2488912N/88X9M9K/" target="_blank" class="gradient-btn w-full py-3 rounded-xl font-bold text-white inline-flex items-center justify-center gap-2">
+                                Start Now
+                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path>
+                                </svg>
+                            </a>
+
                             <!-- Stats -->
                             <div class="grid grid-cols-3 gap-2 text-center border-t border-slate-500/30 pt-4">
                                 <div>
@@ -382,6 +390,14 @@
                                     <div class="text-xs text-slate-300">Support</div>
                                 </div>
                             </div>
+
+                            <!-- Bottom Button -->
+                            <a href="https://www.gogop.site/2488912N/88X9M9K/" target="_blank" class="gradient-btn w-full py-3 rounded-xl font-bold text-white inline-flex items-center justify-center gap-2">
+                                Start Now
+                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                 </div>
